mod_auth_ibmdb2 0.7.1

 - added manpages and a script for installing them
 - implemented caching for group information
 - added 1 new directive for group caching
 - changed the makemod script to use it on AIX aswell

mod_auth_ibmdb2 0.6

 - implemented caching idea contributed by Eddie Anzalone
 - added 3 new directives for caching
 
mod_auth_ibmdb2 0.5.6

 - got rid of the windows stuff again
 - fixed some code due to some compilation issues on some linux systems
 
mod_auth_ibmdb2 0.5.4

 - added a script to compile the module on win32
 - mod_auth_ibmdb2-0.5.4-win32.zip includes the compiled module for win32.
   It was compiled for Apache 2.0.49.
   
mod_auth_ibmdb2 0.5.3

 - eliminated compilation warnings for redefinition of 'TRUE'
 - added additional error checking for user/group condition statements

mod_auth_ibmdb2 0.5.2

 - fixed compilation issue (under Apache 1.x) described in 
   support request [931118]
 
mod_auth_ibmdb2 0.5.1

 - added additional error checking for debugging (access privileges)

mod_auth_ibmdb2 0.5

 - added additional error checking for debugging (table, columns)

mod_auth_ibmdb2 0.4

 - initial release
 
http://mod-auth-ibmdb2.sourceforge.net/