@@ -1,11 +1,9 @@
-Copyright (c) 2004 Helmut K. C. Tessarek
-All rights reserved.
+$Id$
 
+Copyright (c) 2004-2006 Helmut K. C. Tessarek
 written by Helmut K. C. Tessarek
 
-Last Update: 01-07-2004
-
-http://mod-auth-ibmdb2.sourceforge.net/
+http://mod-auth-ibmdb2.sourceforge.net
 
 Contents:
 ---------
