@@ -1,3 +1,28 @@
+/*
+  +----------------------------------------------------------------------+
+  | mod_auth_ibmdb2: authentication using an IBM DB2 database            |
+  +----------------------------------------------------------------------+
+  | Copyright (c) 2004-2006 Helmut K. C. Tessarek                        |
+  +----------------------------------------------------------------------+
+  | Licensed under the Apache License, Version 2.0 (the "License"); you  |
+  | may not use this file except in compliance with the License. You may |
+  | obtain a copy of the License at                                      |
+  | http://www.apache.org/licenses/LICENSE-2.0                           |
+  |                                                                      |
+  | Unless required by applicable law or agreed to in writing, software  |
+  | distributed under the License is distributed on an "AS IS" BASIS,    |
+  | WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or      |
+  | implied. See the License for the specific language governing         |
+  | permissions and limitations under the License.                       |
+  +----------------------------------------------------------------------+
+  | Author: Helmut K. C. Tessarek                                        |
+  +----------------------------------------------------------------------+
+  | Website: http://mod-auth-ibmdb2.sourceforge.net                      |
+  +----------------------------------------------------------------------+
+*/
+
+/* $Id$ */
+
 #ifndef MD5_CRYPT_H
 #define MD5_CRYPT_H
 
